# safe-dot-env

./: GUI.py  README.md  desc.json  output64.txt  output_vid.txt  pyproject.toml  requirements.md  safe-dot-env.rar:Zone.Identifier  software_requirement.md  text.txt  video_details.db
safe_dot_env/download_process/: download.py  extract_text.py  pop_ups.py  shazam.py  sqlite.py  youtube_commnets.py
test_text_classifier/: test.py
tests/: test_safe_dot_env.py
