[tool.poetry]
name = "safe-dot-env"
version = "0.1.0"
description = ""
authors = ["m7madmomani2 <mohammad.momani1996.kk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytube = "^10.8.4"
SpeechRecognition = "^3.8.1"
moviepy = "^1.0.3"
profanity-check = "^1.0.3"
pydub = "^0.25.1"
joblib = "^1.0.1"
sklearn = "^0.0"
numpy = "^1.20.3"
better-profanity = "^0.7.0"
ibm-watson = "^5.1.0"
alt-profanity-check = "^0.24.0"
pandas = "^1.2.4"
ffmpeg = "^1.4"
google-api-python-client = "^2.7.0"
Pillow = "^8.2.0"
requests = "^2.25.1"
PySnooper = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
